--- a/Timon.Maui/AppShell.xaml
+++ b/Timon.Maui/AppShell.xaml
@@ -4,10 +4,11 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:Timon.Maui"
+    xmlns:AuthenticationViews="clr-namespace:Timon.Maui.Views.Authentication"
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
-        ContentTemplate="{DataTemplate Timon.Maui.Views.LoginPage}"
-        Route="Views/LoginPage" />
+        ContentTemplate="{DataTemplate AuthenticationViews:LoginPage}"
+        Route="LoginPage" />
 
 </Shell>
