--- a/Timon.Maui/Views/Authentication/LoginPage.xaml
+++ b/Timon.Maui/Views/Authentication/LoginPage.xaml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Timon.Maui.Views.Authentication.LoginPage">
+             x:Class="Timon.Maui.Views.Authentication.LoginPage"
+             xmlns:AuthenticationViewModels="clr-namespace:Timon.Maui.ViewModels.Authentication">
+    <ContentPage.BindingContext>
+        <AuthenticationViewModels:LoginViewModel />
+    </ContentPage.BindingContext>
+    
     <VerticalStackLayout  VerticalOptions="CenterAndExpand" WidthRequest="300">
         <Image Source="{AppThemeBinding Light=logo_light.svg, Dark=logo_dark.svg}" Margin="40" VerticalOptions="Center" HorizontalOptions="Center"></Image>
         <Label Text="Login" FontSize="24" FontFamily="OpenSansBold" HorizontalOptions="Center" Margin="0,0,0,20" HorizontalTextAlignment="Center" />
