--- a/Timon.Maui/Views/Authentication/RegisterPage.xaml
+++ b/Timon.Maui/Views/Authentication/RegisterPage.xaml
@@ -2,7 +2,11 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Timon.Maui.Views.Authentication.RegisterPage"
-             Title="RegisterPage">
+             xmlns:AuthenticationViewModels="clr-namespace:Timon.Maui.ViewModels.Authentication">
+    <ContentPage.BindingContext>
+        <AuthenticationViewModels:RegisterViewModel />
+    </ContentPage.BindingContext>
+    
     <VerticalStackLayout  VerticalOptions="CenterAndExpand" WidthRequest="300">
         <Image Source="{AppThemeBinding Light=logo_light.svg, Dark=logo_dark.svg}" WidthRequest="100" VerticalOptions="Center" HorizontalOptions="Center"></Image>
         <Label Text="Register" FontSize="24" FontFamily="OpenSansBold" HorizontalOptions="Center" Margin="0,0,0,20" HorizontalTextAlignment="Center" />
