--- a/Timon.Maui/Views/MoneyRecord/EditMoneyRecordPage.xaml
+++ b/Timon.Maui/Views/MoneyRecord/EditMoneyRecordPage.xaml
@@ -2,11 +2,10 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Timon.Maui.Views.MoneyRecord.EditMoneyRecordPage"
-             Title="EditMoneyRecordPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             xmlns:MoneyRecordViewModels="clr-namespace:Timon.Maui.ViewModels.MoneyRecord">
+    <ContentPage.BindingContext>
+        <MoneyRecordViewModels:EditMoneyRecordViewModel/>
+    </ContentPage.BindingContext>
+    
+    
 </ContentPage>
