--- a/Timon.Maui/Views/Settings/SettingsPage.xaml
+++ b/Timon.Maui/Views/Settings/SettingsPage.xaml
@@ -2,11 +2,10 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Timon.Maui.Views.Settings.SettingsPage"
-             Title="SettingsPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             xmlns:SettingsViewModel="clr-namespace:Timon.Maui.ViewModels.Settings">
+    <ContentPage.BindingContext>
+        <SettingsViewModel:SettingsViewModel/>
+    </ContentPage.BindingContext>
+    
+    
 </ContentPage>
