--- a/Timon.Maui/Views/Statistics/StatisticsPage.xaml
+++ b/Timon.Maui/Views/Statistics/StatisticsPage.xaml
@@ -2,11 +2,10 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Timon.Maui.Views.Statistics.StatisticsPage"
-             Title="StatisticsPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             xmlns:StatisticsViewModels="clr-namespace:Timon.Maui.ViewModels.Statistics">
+    <ContentPage.BindingContext>
+        <StatisticsViewModels:StatisticsViewModel/>
+    </ContentPage.BindingContext>
+    
+    
 </ContentPage>
