--- a/Timon.Maui/Views/TimeRecord/AddTimeRecordPage.xaml
+++ b/Timon.Maui/Views/TimeRecord/AddTimeRecordPage.xaml
@@ -2,11 +2,10 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Timon.Maui.Views.TimeRecord.AddTimeRecordPage"
-             Title="AddTimeRecordPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             xmlns:TimeRecordViewModels="clr-namespace:Timon.Maui.ViewModels.TimeRecord">
+    <ContentPage.BindingContext>
+        <TimeRecordViewModels:AddTimeRecordViewModel/>
+    </ContentPage.BindingContext>
+    
+    
 </ContentPage>
