--- a/Timon.Maui/Views/Authentication/LoginPage.xaml
+++ b/Timon.Maui/Views/Authentication/LoginPage.xaml
@@ -2,11 +2,9 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Timon.Maui.Views.Authentication.LoginPage"
-             xmlns:AuthenticationViewModels="clr-namespace:Timon.Maui.ViewModels.Authentication">
-    <ContentPage.BindingContext>
-        <AuthenticationViewModels:LoginViewModel />
-    </ContentPage.BindingContext>
-    
+             Shell.NavBarIsVisible="false"
+             Shell.FlyoutItemIsVisible="False"
+             Shell.TabBarIsVisible="False">
     <VerticalStackLayout  VerticalOptions="CenterAndExpand" WidthRequest="300">
         <Image Source="{AppThemeBinding Light=logo_light.svg, Dark=logo_dark.svg}" Margin="40" VerticalOptions="Center" HorizontalOptions="Center"></Image>
         <Label Text="Login" FontSize="24" FontFamily="OpenSansBold" HorizontalOptions="Center" Margin="0,0,0,20" HorizontalTextAlignment="Center" />
@@ -14,12 +12,12 @@
         <Entry Placeholder="Username" Text="{Binding Username}"/>
         <Entry Placeholder="Password" IsPassword="True" Text="{Binding Password}" />
 
-        <Button Text="Login" Command="{Binding LoginCommand}" HorizontalOptions="FillAndExpand" Margin="0,20,0,0"/>
+        <Button Text="Login" Command="{Binding LoginCommand}" IsEnabled="{Binding CanLogin}" HorizontalOptions="FillAndExpand" Margin="0,20,0,0"/>
         <StackLayout Orientation="Horizontal" Spacing="5" HorizontalOptions="Center" Margin="0,10,0,0">
             <Label Text="Don't have an account yet?" TextColor="{AppThemeBinding Light={StaticResource Gray300}, Dark={StaticResource Gray100}}" />
             <Label Text="Sign Up" TextColor="{AppThemeBinding Light={StaticResource Tertiary}, Dark={StaticResource Cyan300Accent}}">
                 <Label.GestureRecognizers>
-                    <TapGestureRecognizer Command="{Binding SwitchToLogin}"/>
+                    <TapGestureRecognizer Command="{Binding NavigateToRegisterCommand}"/>
                 </Label.GestureRecognizers>
             </Label>
         </StackLayout>
