--- a/Timon.Maui/Views/MoneyRecord/EditMoneyRecordPage.xaml
+++ b/Timon.Maui/Views/MoneyRecord/EditMoneyRecordPage.xaml
@@ -2,10 +2,18 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Timon.Maui.Views.MoneyRecord.EditMoneyRecordPage"
-             xmlns:MoneyRecordViewModels="clr-namespace:Timon.Maui.ViewModels.MoneyRecord">
-    <ContentPage.BindingContext>
-        <MoneyRecordViewModels:EditMoneyRecordViewModel/>
-    </ContentPage.BindingContext>
-    
-    
+             xmlns:moneyRecordViewModels="clr-namespace:Timon.Maui.ViewModels.MoneyRecord">
+
+    <VerticalStackLayout  VerticalOptions="CenterAndExpand" WidthRequest="300" Spacing="10">
+        <Label Text="Add new money record" FontSize="24" FontFamily="OpenSansBold" HorizontalOptions="Center" Margin="0,0,0,20" HorizontalTextAlignment="Center" />
+
+        <Entry Placeholder="Name" Text="{Binding Name}"/>
+        <Entry Placeholder="Description" Text="{Binding Description}"/>
+        <VerticalStackLayout Spacing="-10">
+            <Label Text="Date" FontFamily="OpenSansMediumItalic" Margin="3,0,0,0"/>
+            <DatePicker Date="{Binding SelectedDate}"></DatePicker>
+        </VerticalStackLayout>
+        <Entry Placeholder="Amount UAH" Keyboard="Numeric" Text="{Binding Amount}"/>
+        <Button Text="Save" Command="{Binding SaveCommand}" HorizontalOptions="FillAndExpand" Margin="40"/>
+    </VerticalStackLayout>
 </ContentPage>
