--- a/Timon.Maui/Views/Settings/ProfilePage.xaml
+++ b/Timon.Maui/Views/Settings/ProfilePage.xaml
@@ -2,10 +2,6 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Timon.Maui.Views.Settings.ProfilePage"
-             xmlns:SettingsViewModel="clr-namespace:Timon.Maui.ViewModels.Settings">
-    <ContentPage.BindingContext>
-        <SettingsViewModel:ProfileViewModel/>
-    </ContentPage.BindingContext>
-    
+             xmlns:settingsViewModel="clr-namespace:Timon.Maui.ViewModels.Settings">
     
 </ContentPage>
