--- a/Timon.Maui/Views/Settings/SettingsPage.xaml
+++ b/Timon.Maui/Views/Settings/SettingsPage.xaml
@@ -2,10 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Timon.Maui.Views.Settings.SettingsPage"
-             xmlns:SettingsViewModel="clr-namespace:Timon.Maui.ViewModels.Settings">
-    <ContentPage.BindingContext>
-        <SettingsViewModel:SettingsViewModel/>
-    </ContentPage.BindingContext>
+             xmlns:settingsViewModel="clr-namespace:Timon.Maui.ViewModels.Settings"
+             xmlns:settingsViews="clr-namespace:Timon.Maui.Views.Settings">
     
     
 </ContentPage>
