--- a/Timon.Maui/Views/TimeRecord/EditTimeRecordPage.xaml
+++ b/Timon.Maui/Views/TimeRecord/EditTimeRecordPage.xaml
@@ -2,11 +2,27 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Timon.Maui.Views.TimeRecord.EditTimeRecordPage"
-             xmlns:TimeRecordViewModels="clr-namespace:Timon.Maui.ViewModels.TimeRecord">
-    <ContentPage.BindingContext>
-        <TimeRecordViewModels:EditTimeRecordViewModel/>
-    </ContentPage.BindingContext>
+             xmlns:timeRecordViewModels="clr-namespace:Timon.Maui.ViewModels.TimeRecord">
 
-    
+    <VerticalStackLayout  VerticalOptions="CenterAndExpand" WidthRequest="250" Spacing="5">
+        <Label Text="Edit time record" FontSize="24" FontFamily="OpenSansBold" HorizontalOptions="Center" Margin="0,0,0,20" HorizontalTextAlignment="Center" />
+
+        <Entry Placeholder="Name" Text="{Binding Name}"/>
+        <Entry Placeholder="Description" Text="{Binding Description}"/>
+        <VerticalStackLayout Spacing="-10">
+            <Label Text="Date" FontFamily="OpenSansMediumItalic" Margin="3,0,0,0"/>
+            <DatePicker Date="{Binding SelectedDate}"></DatePicker>
+        </VerticalStackLayout>
+        <VerticalStackLayout Spacing="-10">
+            <Label Text="From" FontFamily="OpenSansMediumItalic" Margin="3,0,0,0"/>
+            <TimePicker Time="{Binding TimeFrom}"></TimePicker>
+        </VerticalStackLayout>
+        <VerticalStackLayout Spacing="-10">
+            <Label Text="To" FontFamily="OpenSansMediumItalic" Margin="3,0,0,0"/>
+            <TimePicker Time="{Binding TimeTo}"></TimePicker>
+        </VerticalStackLayout>
+
+        <Button Text="Save" Command="{Binding SaveCommand}" HorizontalOptions="FillAndExpand" Margin="40"/>
+    </VerticalStackLayout>
     
 </ContentPage>
