--- a/Timon.Maui/Views/TimeRecord/TimeRecordsPage.xaml
+++ b/Timon.Maui/Views/TimeRecord/TimeRecordsPage.xaml
@@ -2,10 +2,6 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Timon.Maui.Views.TimeRecord.TimeRecordsPage"
-             xmlns:TimeRecordViewModels="clr-namespace:Timon.Maui.ViewModels.TimeRecord">
-    <ContentPage.BindingContext>
-        <TimeRecordViewModels:TimeRecordsViewModel/>
-    </ContentPage.BindingContext>
-    
+             xmlns:timeRecordViewModels="clr-namespace:Timon.Maui.ViewModels.TimeRecord">
     
 </ContentPage>
