--- a/Timon.Maui/Resources/Styles/Colors.xaml
+++ b/Timon.Maui/Resources/Styles/Colors.xaml
@@ -31,9 +31,9 @@
     <SolidColorBrush x:Key="Gray900Brush" Color="{StaticResource Gray900}"/>
     <SolidColorBrush x:Key="Gray950Brush" Color="{StaticResource Gray950}"/>
 
-    <Color x:Key="Yellow100Accent">#F7B548</Color>
-    <Color x:Key="Yellow200Accent">#FFD590</Color>
-    <Color x:Key="Yellow300Accent">#FFE5B9</Color>
+    <Color x:Key="Yellow100Accent">#512BD4</Color>
+    <Color x:Key="Yellow200Accent">#DFD8F7</Color>
+    <Color x:Key="Yellow300Accent">#2B0B98</Color>
     <Color x:Key="Cyan100Accent">#28C2D1</Color>
     <Color x:Key="Cyan200Accent">#7BDDEF</Color>
     <Color x:Key="Cyan300Accent">#C3F2F4</Color>
