--- a/Timon.Maui/Views/Settings/SettingsPage.xaml
+++ b/Timon.Maui/Views/Settings/SettingsPage.xaml
@@ -3,7 +3,29 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Timon.Maui.Views.Settings.SettingsPage"
              xmlns:settingsViewModel="clr-namespace:Timon.Maui.ViewModels.Settings"
-             xmlns:settingsViews="clr-namespace:Timon.Maui.Views.Settings">
-    
+             xmlns:settingsViews="clr-namespace:Timon.Maui.Views.Settings"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit">
+<VerticalStackLayout HorizontalOptions="Center" VerticalOptions="Center">
+<HorizontalStackLayout>
+    <Label Text="Switch app theme" FontSize="20" VerticalTextAlignment="Center" HorizontalOptions="Center"></Label>
+            <Switch IsEnabled="{Binding CanSwitchTheme}" IsToggled="{Binding IsDarkMode}">
+                <Switch.Behaviors>
+                    <toolkit:EventToCommandBehavior
+                        EventName="Toggled"
+                        Command="{Binding SwitchAppThemeCommand}" />
+                </Switch.Behaviors>
+                </Switch>
+</HorizontalStackLayout>
+    <HorizontalStackLayout>
+        <Label Text="Sync with app theme with system" FontSize="20" VerticalTextAlignment="Center" HorizontalOptions="Center"></Label>
+        <Switch IsToggled="{Binding IsSyncedWithOs}">
+            <Switch.Behaviors>
+                <toolkit:EventToCommandBehavior
+                    EventName="Toggled"
+                    Command="{Binding SwitchAppThemeToSystemsCommand}" />
+            </Switch.Behaviors>
+        </Switch>
+    </HorizontalStackLayout>
+    </VerticalStackLayout>
     
 </ContentPage>
