--- a/Timon.Maui/Views/TimeRecord/TimeRecordsPage.xaml
+++ b/Timon.Maui/Views/TimeRecord/TimeRecordsPage.xaml
@@ -9,26 +9,30 @@
                 <DataTemplate>
                     <ViewCell>
                         <ViewCell.View>
-                            <HorizontalStackLayout VerticalOptions="Center">
+                            <HorizontalStackLayout Margin="20" VerticalOptions="Center">
                                 <StackLayout WidthRequest="140">
-                                    <Label Margin="10" FontFamily="OpenSansMedium" Text="{Binding Name}" FontSize="18" />
-                                    <Label Margin="10,-13,0,0" FontFamily="OpenSansLightItalic" Text="{Binding Description}" FontSize="12" />
+                                    <Label FontFamily="OpenSansMedium" Text="{Binding Name}" FontSize="18" />
+                                    <Label Padding="0,-3,0,0" FontFamily="OpenSansLightItalic" Text="{Binding Description}" FontSize="15" />
                                 </StackLayout>
-                                <StackLayout Margin="10">
+                                <StackLayout WidthRequest="170">
                                     <HorizontalStackLayout VerticalOptions="Center">
-                                        <Label Text="From: "></Label>
-                                        <Label FontFamily="OpenSansRegularItalic" Text="{Binding DateFrom, StringFormat='{}{0:MM/dd/yyyy a\\t h:mm'}" />
+                                        <Label FontFamily="OpenSansMedium" Text="Date: "></Label>
+                                        <Label FontFamily="OpenSansBoldItalic" Text="{Binding DateFrom, StringFormat='{0:MM/dd/yyyy}'}"  TextColor="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource Secondary}}" />
                                     </HorizontalStackLayout>
                                     <HorizontalStackLayout VerticalOptions="Center">
-                                        <Label Text="To: "></Label>
-                                        <Label FontFamily="OpenSansRegularItalic" Text="{Binding DateTo, StringFormat='{}{0:MM/dd/yyyy a\\t h:mm'}" />
+                                        <Label Text="Duration: "></Label>
+                                        <HorizontalStackLayout>
+                                            <Label Text="{Binding Duration}" FontFamily="OpenSansBoldItalic" TextColor="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource Secondary}}" />
+                                            <Label Text=" minutes" FontFamily="OpenSansBoldItalic" TextColor="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource Secondary}}" />
+                                        </HorizontalStackLayout>
                                     </HorizontalStackLayout>
                                     <Label FontFamily="OpenSansLightItalic" Text="{Binding Date}" FontSize="15" />
                                 </StackLayout>
-                                <Button ImageSource="{AppThemeBinding Dark=pencil_dark.png Light=pencil_light.png}"
-                                        ContentLayout="Top,0"  Margin="10"
+                                <Button ImageSource="{AppThemeBinding Dark=pencil_dark.png, Light=pencil_light.png}"
+                                        ContentLayout="Top,0"
                                         WidthRequest="40"
                                         HeightRequest="40"
+                                        HorizontalOptions="End"
                                         Command="{Binding Source={RelativeSource AncestorType={x:Type Page}}, Path=BindingContext.NavigateToDetailsCommand}"
                                         CommandParameter="{Binding Id}"></Button>
                             </HorizontalStackLayout>
